@@ -5,6 +5,9 @@ The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
 and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
 == [Unreleased]
+=== Fixed
+
+* Don't compute twice a node when using AND or OR as join mode on it.
 
 == [0.2.0] - 2018-10-08
 === Added
